--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "eccb-platform",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   },
