--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "next dev",
+    "prebuild": "bash ./scripts/setup-admin.sh",
     "build": "next build",
     "start": "node --import tsx scripts/start.ts",
     "start:server": "next start",
@@ -21,6 +22,7 @@
     "db:seed": "prisma db seed",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
+    "setup": "bash ./scripts/setup-interactive.sh",
     "security:audit": "bash scripts/security-audit.sh",
     "security:check": "npm audit --audit-level=moderate",
     "security:fix": "npm audit fix",
@@ -32,7 +34,7 @@
     "@aws-sdk/s3-request-presigner": "^3.982.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-pg": "^7.3.0",
-    "@prisma/client": "^7.3.0",
+    "@prisma/client": "^7.4.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
