feat: implement Schema Automation Service for managing Prisma migrations and database seeding
- Add schema-automation.ts to handle migration operations, including applying, creating, and resetting migrations.
- Introduce types for migration information, results, and seeding outcomes.
- Create utility functions for quick migration status checks and running migrations.

feat: define core types for database setup operations

- Add types.ts to define enums and interfaces for database setup, including connection configurations and setup progress status.
- Implement error handling with a custom SetupError class for better error management during setup operations.

feat: create Database Validation Service for comprehensive database checks

- Add validation.ts to validate database connectivity, schema integrity, and user permissions.
- Implement functions to check database connection, schema status, required tables, and user permissions.
- Provide a comprehensive validation result interface to summarize validation outcomes.

--- a/env.example
+++ b/env.example
@@ -6,143 +6,171 @@
 # ------------------------------------------------------------------------------
 # APP & ENVIRONMENT
 # ------------------------------------------------------------------------------
-# [Required: No] env mode
+# [Required: No] Environment mode: development, production, or test
 NODE_ENV="development"
-# [Required: No] server port
+# [Required: No] Server port
 PORT="3015"
-# [Required: No] client-visible
-NEXT_PUBLIC_APP_URL="http://localhost:3015"
-# [Required: No] client-visible
+# [Required: Yes] Public-facing application URL (including protocol)
+APP_URL="http://localhost:3015"
+# [Required: No] Client-visible app name
 NEXT_PUBLIC_APP_NAME="Emerald Coast Community Band"
-# [Required: No] optional
+# [Required: No] Optional
 APP_VERSION="1.0.0"
 
 # ------------------------------------------------------------------------------
 # DATABASE & CACHE
 # ------------------------------------------------------------------------------
-# [Required: Yes] Prisma DB
-DATABASE_URL="postgres://postgres:pass@localhost:5432/eccb_dev"
-# [Required: No] default fallback
+# [Required: Yes] Database connection string (mysql:// for MariaDB, postgres:// for PostgreSQL)
+# Format: mysql://user:password@host:port/database_name
+# Example: mysql://eccb_user:secure_password@localhost:3306/eccb_dev
+DATABASE_URL="mysql://eccb_user:secure_password@localhost:3306/eccb_dev"
+
+# Alternative Database Configuration (use instead of DATABASE_URL)
+# [Required: Yes if not using DATABASE_URL] Database host
+DATABASE_HOST="localhost"
+# [Required: Yes if not using DATABASE_URL] Database port (default: 3306 for MariaDB/MySQL)
+DATABASE_PORT="3306"
+# [Required: Yes if not using DATABASE_URL] Database username
+DATABASE_USER="eccb_app_user"
+# [Required: Yes if not using DATABASE_URL] Database password
+DATABASE_PASSWORD="Bhg75jfmc!"
+# [Required: Yes if not using DATABASE_URL] Database name
+DATABASE_NAME="eccb_dev"
+
+# [Required: No] Redis connection URL for caching and sessions
+# Format: redis://[password@]host[:port][/database]
 REDIS_URL="redis://localhost:6379"
 
 # ------------------------------------------------------------------------------
 # AUTHENTICATION
 # ------------------------------------------------------------------------------
-# [Required: Yes] must be ≥32 chars
+# [Required: Yes] Authentication secret (minimum 32 characters)
+# Use: openssl rand -base64 32
 AUTH_SECRET="GENERATE_32+_CHAR_SECRET"
-# [Required: Yes] must be ≥32 chars
+# [Required: Yes] Alternative auth secret (minimum 32 characters)
 BETTER_AUTH_SECRET="GENERATE_32+_CHAR_SECRET"
-# [Required: No] server auth URL
+# [Required: No] Server authentication URL (used for auth callbacks)
 AUTH_URL="http://localhost:3015"
-# [Required: No] better-auth URL
+# [Required: No] Better Auth URL
 BETTER_AUTH_URL="http://localhost:3015"
 
 # ------------------------------------------------------------------------------
 # SUPER ADMIN (Seeding)
 # ------------------------------------------------------------------------------
-# [Required: No (but required for seeding)] used by seeder
+# [Required: No (but required for initial seeding)] Super admin email address
 SUPER_ADMIN_EMAIL="admin@eccb.org"
-# [Required: Required for seeding] do NOT commit real password
+# [Required: Yes for initial seeding] Super admin password - do NOT commit real password
 SUPER_ADMIN_PASSWORD="eccb_admin_2026!"
-# [Required: No] dev fallback only
+# [Required: No] Default fallback password for development
 SUPER_ADMIN_DEFAULT_PASSWORD="eccb_admin_2026!"
-# [Required: No] (used in a few places)
+# [Required: No] Primary administrator email (used in various notifications)
 ADMIN_EMAIL="admin@eccb.app"
 
 # ------------------------------------------------------------------------------
 # OAUTH (Google)
 # ------------------------------------------------------------------------------
-# [Required: No] OAuth (optional)
+# [Required: No] Google OAuth client ID
 GOOGLE_CLIENT_ID=""
-# [Required: No] OAuth secret
+# [Required: No] Google OAuth client secret
 GOOGLE_CLIENT_SECRET=""
-# [Required: No] client visibility flag
+# [Required: No] Enable Google authentication (true/false)
 NEXT_PUBLIC_GOOGLE_AUTH_ENABLED="false"
 
 # ------------------------------------------------------------------------------
 # STORAGE (Local or S3)
 # ------------------------------------------------------------------------------
-# [Required: No] LOCAL or S3
+# [Required: No] Storage driver: LOCAL or S3
 STORAGE_DRIVER="LOCAL"
-# [Required: No] local uploads path
+# [Required: No] Local storage path for uploads
 LOCAL_STORAGE_PATH="./storage"
-# [Required: No] bytes (50MB)
+# [Required: No] Maximum file size in bytes (default: 50MB)
 MAX_FILE_SIZE="52428800"
 
 # S3 Configuration (Required if STORAGE_DRIVER=S3)
-# [Required: Yes if S3] MinIO / S3 endpoint
+# [Required: Yes if S3] MinIO / S3 endpoint URL
 S3_ENDPOINT="http://minio:9000"
-# [Required: Yes if S3] bucket/container
+# [Required: Yes if S3] S3 bucket name
 S3_BUCKET_NAME="eccb-storage"
-# [Required: Yes if S3] region
+# [Required: Yes if S3] AWS/S3 region
 S3_REGION="us-east-1"
-# [Required: Yes if S3] secret
+# [Required: Yes if S3] S3 access key ID
 S3_ACCESS_KEY_ID="minioadmin"
-# [Required: Yes if S3] secret
+# [Required: Yes if S3] S3 secret access key
 S3_SECRET_ACCESS_KEY="minioadmin"
-# [Required: No] helpful for MinIO
+# [Required: No] Force path-style addressing (true for MinIO, false for AWS S3)
 S3_FORCE_PATH_STYLE="true"
 
 # ------------------------------------------------------------------------------
-# EMAIL (SMTP)
+# EMAIL
 # ------------------------------------------------------------------------------
-# [Required: No] LOG, SMTP, or NONE
-EMAIL_DRIVER="LOG"
-# [Required: Yes if SMTP] SMTP host
+# [Required: No] Email provider: smtp, sendgrid, resend, or log
+# Options: smtp, sendgrid, resend, log, none
+EMAIL_PROVIDER="log"
+
+# SMTP Configuration (Required if EMAIL_PROVIDER=smtp)
+# [Required: Yes if SMTP] SMTP server hostname
 SMTP_HOST="smtp.mailtrap.io"
-# [Required: Yes if SMTP] SMTP port
+# [Required: Yes if SMTP] SMTP server port (typically 587 for TLS, 465 for SSL)
 SMTP_PORT="587"
-# [Required: Yes if SMTP auth used] SMTP user
+# [Required: Yes if SMTP authentication is used] SMTP username
 SMTP_USER=""
-# [Required: Yes if SMTP auth used] SMTP pass
+# [Required: Yes if SMTP authentication is used] SMTP password
 SMTP_PASSWORD=""
-# [Required: No] true/false
+# [Required: No] Use SSL/TLS (true for port 465, false for port 587)
 SMTP_SECURE="false"
-# [Required: No] From address
+# [Required: No] Default "From" address for emails
 SMTP_FROM="noreply@eccb.app"
+
+# SendGrid Configuration (Required if EMAIL_PROVIDER=sendgrid)
+# [Required: Yes if SendGrid] SendGrid API key
+# SENDGRID_API_KEY=""
+
+# Resend Configuration (Required if EMAIL_PROVIDER=resend)
+# [Required: Yes if Resend] Resend API key
+# RESEND_API_KEY=""
 
 # ------------------------------------------------------------------------------
 # PUSH NOTIFICATIONS
 # ------------------------------------------------------------------------------
-# [Required: No] push notifications
+# [Required: No] VAPID public key for push notifications
 VAPID_PUBLIC_KEY=""
-# [Required: No] push notifications
+# [Required: No] VAPID private key for push notifications
 VAPID_PRIVATE_KEY=""
 
 # ------------------------------------------------------------------------------
 # VIRUS SCANNING (ClamAV)
 # ------------------------------------------------------------------------------
-# [Required: No] ClamAV toggle
+# [Required: No] Enable ClamAV virus scanning (true/false)
 ENABLE_VIRUS_SCAN="false"
-# [Required: No] virus scan host
+# [Required: No] ClamAV daemon host
 CLAMAV_HOST="localhost"
-# [Required: No] virus scan port
+# [Required: No] ClamAV daemon port
 CLAMAV_PORT="3310"
 
 # ------------------------------------------------------------------------------
 # LOGGING
 # ------------------------------------------------------------------------------
-# [Required: No] file logs
+# [Required: No] Directory for log files
 LOG_DIR="./logs"
-# [Required: No] retention
+# [Required: No] Log retention period in days
 LOG_RETENTION_DAYS="7"
-# [Required: No] rotation size
+# [Required: No] Maximum log file size in MB before rotation
 LOG_MAX_SIZE_MB="100"
-# [Required: No] rotation mode
+# [Required: No] Log rotation mode: daily, hourly, or size
 LOG_ROTATION="daily"
 
 # ------------------------------------------------------------------------------
 # WORKERS & PROCESS MANAGEMENT
 # ------------------------------------------------------------------------------
-# [Required: No] worker health
+# [Required: No] Worker health check port
 WORKER_HEALTH_PORT="3001"
-# [Required: No] pm health
+# [Required: No] Process manager health check port
 PROCESS_MANAGER_HEALTH_PORT="3002"
-# [Required: No] boolean
+# [Required: No] Automatically restart crashed processes (true/false)
 RESTART_CRASHED_PROCESSES="false"
-# [Required: No] scheduler tick
+# [Required: No] Scheduler interval in milliseconds (default: 1 minute)
 SCHEDULER_INTERVAL_MS="60000"
-# [Required: No] daily cleanup
+# [Required: No] Cleanup interval in milliseconds (default: 24 hours)
 CLEANUP_INTERVAL_MS="86400000"
-# [Required: No] boolean
+# [Required: No] Enable background worker (true/false)
 ENABLE_WORKER="true"
