--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "deps:update": "npm outdated && npm update --interactive"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.982.0",
-    "@aws-sdk/s3-request-presigner": "^3.982.0",
+    "@aws-sdk/client-s3": "^3.992.0",
+    "@aws-sdk/s3-request-presigner": "^3.992.0",
     "@hookform/resolvers": "^5.2.2",
-    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/adapter-mariadb": "^7.4.0",
     "@prisma/client": "^7.3.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -77,10 +77,10 @@
     "input-otp": "^1.4.2",
     "ioredis": "^5.9.3",
     "lucide-react": "^0.563.0",
+    "mysql2": "^3.17.2",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.13",
-    "pg": "^8.18.0",
     "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
@@ -102,7 +102,6 @@
     "@testing-library/react": "^16.3.2",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.9",
-    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.1.2",
