--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "deps:update": "npm outdated && npm update --interactive"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.78.0",
     "@aws-sdk/client-s3": "^3.992.0",
     "@aws-sdk/s3-request-presigner": "^3.992.0",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-mariadb": "^7.4.0",
     "@prisma/client": "^7.3.0",
@@ -81,6 +83,9 @@
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.13",
+    "openai": "^6.22.0",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
     "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
@@ -102,6 +107,7 @@
     "@testing-library/react": "^16.3.2",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.9",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.1.2",
