--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "bcryptjs": "^3.0.3",
     "better-auth": "^1.4.18",
     "bullmq": "^5.69.1",
+    "canvas": "^3.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -86,6 +87,8 @@
     "openai": "^6.22.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
+    "pdf2pic": "^3.2.0",
+    "pdfjs-dist": "^5.4.624",
     "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
@@ -97,6 +100,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^7.0.0",
     "vaul": "^1.1.2",
     "zod": "^4.3.6"
   },
