feat: enable Smart Upload feature and integrate document classification functionality

--- a/env.example
+++ b/env.example
@@ -179,7 +179,7 @@ ENABLE_WORKER="true"
 # SMART UPLOAD (AI-Powered File Processing)
 # ------------------------------------------------------------------------------
 # [Required: No] Enable Smart Upload feature (true/false)
-SMART_UPLOAD_ENABLED="false"
+SMART_UPLOAD_ENABLED="true"
 # [Required: No] Maximum number of files per upload (default: 20)
 SMART_UPLOAD_MAX_FILES="20"
 # [Required: No] Maximum total bytes for batch upload (default: 500MB = 524288000)
