--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@aws-sdk/client-s3": "^3.992.0",
     "@aws-sdk/s3-request-presigner": "^3.992.0",
     "@hookform/resolvers": "^5.2.2",
-    "@prisma/adapter-mariadb": "7.3.0",
-    "@prisma/client": "7.3.0",
+    "@prisma/adapter-mariadb": "7.4.0",
+    "@prisma/client": "7.4.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -77,6 +77,7 @@
     "dotenv": "^17.2.4",
     "embla-carousel-react": "^8.6.0",
     "gsap": "^3.14.2",
+    "hono": "^4.12.1",
     "input-otp": "^1.4.2",
     "ioredis": "^5.9.3",
     "lucide-react": "^0.563.0",
@@ -84,7 +85,6 @@
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.13",
-    "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
@@ -108,23 +108,30 @@
     "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
     "@vitejs/plugin-react": "^5.1.2",
-    "eslint": "^9.20.0",
+    "eslint": "^9",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.5.0",
     "globals": "^15.14.0",
     "jsdom": "^28.1.0",
     "playwright": "^1.58.0",
-    "prisma": "7.3.0",
+    "prisma": "^7",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
-    "typescript": "^5",
-    "typescript-eslint": "^8.23.0",
+    "typescript": "^5.9.3",
     "vitest": "^4.0.18"
   },
   "overrides": {
     "bullmq": {
       "ioredis": "5.9.3"
-    }
+    },
+    "@prisma/dev": {
+      "hono": ">=4.12.0",
+      "@mrleebo/prisma-ast": "0.14.0"
+    },
+    "minimatch": ">=10.2.1",
+    "@eslint/config-array": ">=0.23.0"
   }
 }
