feat: Enhance repair and setup API actions with structured handling
- Refactor repair and setup API routes to use block-scoped case statements for better readability and maintainability.
- Add new CSS variables for improved theming support in globals.css.
- Update email template form to fix regex for variable replacement.
- Modify smart upload settings form to update default models for LLM providers.
- Introduce UploadPreviewDialog component for displaying PDF previews and extracted metadata.
- Enhance dropdown, popover, and select components with additional className support.
- Clean up imports in db and seeding files for better clarity.
- Improve virus scanner tests to use ts-expect-error for better type safety.
- Update audit service to handle null values for old and new values.
- Implement OCR fallback service for metadata extraction from scanned PDFs.
- Create PDF part detection service to analyze multi-part scores.
- Develop PDF renderer service for converting PDF pages to images.
- Add PDF splitter service for splitting multi-part PDFs into individual parts.
- Include original PDF files for testing in smart-upload storage.

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "bcryptjs": "^3.0.3",
     "better-auth": "^1.4.18",
     "bullmq": "^5.69.1",
+    "canvas": "^3.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -85,6 +86,8 @@
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.13",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.4.624",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
@@ -92,6 +95,7 @@
     "react-resizable-panels": "^4.5.7",
     "recharts": "^3.7.0",
     "redis": "^5.10.0",
+    "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -108,6 +112,7 @@
     "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/sharp": "^0.31.1",
     "@typescript-eslint/eslint-plugin": "^8.56.0",
     "@typescript-eslint/parser": "^8.56.0",
     "@vitejs/plugin-react": "^5.1.2",
