feat: Implement smart upload processing and verification workflow
- Added `splitPdfByCuttingInstructions` function to support custom filename generation.
- Enhanced `ExtractedMetadata` interface to include additional fields: subtitle, arranger, and notes.
- Introduced smart upload worker and processor for handling second-pass verification of music uploads.
- Implemented PDF page sampling and vision LLM analysis for metadata extraction.
- Added logic for validating and normalizing cutting instructions, including gap detection.
- Created new database models and updated existing ones to accommodate smart upload features.
- Implemented error handling and logging for better traceability during processing.

--- a/env.example
+++ b/env.example
@@ -178,9 +178,31 @@ ENABLE_WORKER="true"
 # ------------------------------------------------------------------------------
 # LLM CONFIGURATION (Smart Upload)
 # ------------------------------------------------------------------------------
-# [Required: No] Ollama endpoint for LLM API
+# [Required: No] LLM provider: ollama (default), openai, anthropic, gemini, openrouter, custom
+LLM_PROVIDER="ollama"
+
+# [Required: No] Override the provider's default endpoint URL.
+# If not set, the default for the chosen provider is used automatically:
+#   ollama:      http://localhost:11434
+#   openai:      https://api.openai.com/v1
+#   anthropic:   https://api.anthropic.com
+#   gemini:      https://generativelanguage.googleapis.com/v1beta
+#   openrouter:  https://openrouter.ai/api/v1
+LLM_ENDPOINT_URL=""
+
+# [Deprecated] Use LLM_ENDPOINT_URL instead
 LLM_OLLAMA_ENDPOINT="http://localhost:11434"
-# [Required: No] Vision model for first pass metadata extraction (e.g., llama3.2-vision)
+
+# Provider API keys — only the key matching your chosen provider is used
+# (keys are never shared across providers for security)
+LLM_OPENAI_API_KEY=""
+LLM_ANTHROPIC_API_KEY=""
+LLM_OPENROUTER_API_KEY=""
+LLM_GEMINI_API_KEY=""
+LLM_CUSTOM_API_KEY=""
+LLM_CUSTOM_BASE_URL=""
+
+# [Required: No] Vision model for first pass metadata extraction
 LLM_VISION_MODEL="llama3.2-vision"
-# [Required: No] Verification model for second pass validation (e.g., qwen2.5:7b, llama3:8b)
+# [Required: No] Verification model for second pass validation
 LLM_VERIFICATION_MODEL="qwen2.5:7b"
