--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "scripts": {
     "postinstall": "prisma generate",
     "dev": "next dev",
+    "dev:workers": "tsx src/workers/index.ts",
+    "dev:full": "concurrently -n \"next,workers\" -c \"cyan,magenta\" \"next dev --port 3025\" \"tsx src/workers/index.ts\"",
     "build": "next build",
     "build:production": "npm run db:generate && next build",
     "start:server": "next start",
@@ -114,6 +116,7 @@
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
+    "@tonejs/midi": "^2.0.28",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
@@ -122,7 +125,7 @@
     "@typescript-eslint/eslint-plugin": "^8.56.0",
     "@typescript-eslint/parser": "^8.56.0",
     "@vitejs/plugin-react": "^5.1.2",
-    "@tonejs/midi": "^2.0.28",
+    "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.5.0",
