feat: Enhance Smart Upload Cleanup and Adjudication Process
- Refactor cleanupSmartUploadTempFiles to improve error handling, reduce N+1 queries, and ensure structured logging of success/failure metrics.
- Introduce asError and safeErrorDetails utility functions for consistent error management.
- Add adjudication logic to detect disagreements between first and second pass results and call an adjudicator LLM for resolution.
- Implement buildAdjudicatorPrompt function to create prompts for adjudication based on metadata and disagreements.
- Update types for ExtractedMetadata to include adjudicationNotes and requiresHumanReview fields.
- Create a new OCR worker for dedicated OCR fallback processing with rate limiting and security measures.
- Modify smart-upload-processor-worker to gracefully skip unowned job types and log appropriately.
- Enhance smart-upload-worker to handle adjudication logic and finalize SmartUploadSession updates with adjudicated metadata.

--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "deps:update": "npm outdated && npm update --interactive"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.992.0",
-    "@aws-sdk/s3-request-presigner": "^3.992.0",
+    "@aws-sdk/client-s3": "^3.893.0",
+    "@aws-sdk/s3-request-presigner": "^3.893.0",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/adapter-mariadb": "7.4.0",
     "@prisma/client": "7.4.0",
@@ -104,6 +104,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^7.0.0",
     "tonal": "^6.0.0",
     "vaul": "^1.1.2",
     "webmidi": "^3.1.14",
