--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "ioredis": "^5.9.3",
     "lucide-react": "^0.563.0",
     "mysql2": "^3.17.2",
+    "napi-rs": "^0.3.10",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.13",
