--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "hono": "^4.12.2",
     "input-otp": "^1.4.2",
     "ioredis": "^5.9.3",
+    "jsonrepair": "^3.13.2",
     "lucide-react": "^0.563.0",
     "mysql2": "^3.17.2",
     "napi-rs": "^0.3.10",
